--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
+  "scripts": {
+    "start": "parcel static/index.html",
+    "build": "parcel build static/index.html --public-url ."
+  },
   "devDependencies": {
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
